--- a/README.org
+++ b/README.org
@@ -248,8 +248,7 @@ the other cool features soon! You can easily make your first post in less than
   it's UI (setting keybindings elsewhere is super easy too and you'll cover it
   soon). For simplicity these directions will refer to "things to do in the
   UI" in the style of =UI [action]=.
-  
-  *The Main Menu:*
+- *The Main Menu:*
   [[file:/images/menu-main.png]]
 - Create a brand new entry from a template: =UI [New Buffer]=
 - If you aren't logged in then Org2Blog will ask if you would like to. Yes
