--- a/HISTORY.org
+++ b/HISTORY.org
@@ -6,23 +6,24 @@
 
 - Adds a simple and powerful user interface exposing every aspect of
   Org2Blog—many of which you may never have known even existed before.
-  - Just access help to look up the function name behind every user interface
-    item if you want to bind it to a key.
+  - Use the one-keypress help menu to look up the documentation behind every
+    menu entry along with the function name behind it if you want to bind it
+    to a key.
 - Includes the manual built-in to the application. It is the README.org so you
   don't have to go to the web page to read it.
 - Expands on and revises every aspect of documentation including explanations
   and screenshots.
-  - Styles and strategies covered range from first-time blogging to advanced
-    use with multiple blogs and diverse workflows.
+  - Blogging styles and strategies covered range from first-time blogging to
+    advanced use with multiple blogs and diverse workflows.
 - Adds an API for automating bulk import of Org files when you want to move
   from another Org based blogging platform to Org2Blog.
 - Added a new logo:
   - A WordPress operator's inky hand, colored by Org mode, cradles a special
     press plate for Org2Blog: Org2Blog's first logo. Thank you Cari at
     [[http://sepiarainbow.com/][Sepia Rainbow Designs]] for this brilliant logo.
-- Adds a built-in README with links to learn more about where to start with
-  blogging and how Free Software is critical to you as a user and society as a
-  whole.
+- Adds a built-in README with links to learn more about this project, how to
+  start having fun blogging, and even how Free Software is critical to you as
+  a user and society as a whole.
 
 *** Developers
 
@@ -54,8 +55,8 @@
 ** Future
 
 - Implement Texinfo manual in README.org
-- Get org2blog-tests.org running again
-- Migrate to continuous integration with nix-emacs-ci  
+- Refactor org2blog-tests.org running again
+- Migrate to continuous integration with nix-emacs-ci
 
 *** 2019-01-31 Org2Blog v1.0.3 Released
 
