--- a/docs/ReleaseProcess.org
+++ b/docs/ReleaseProcess.org
@@ -16,3 +16,4 @@
   - [ ] Test using the package
 - [ ] Update [[../HISTORY.org][History]]
 - [ ] Merge branch into ~master~ and tag the release
+  - Note MELPA master and table downloads.
