--- a/README.org
+++ b/README.org
@@ -849,13 +849,12 @@ Configure your source blocks for SyntaxHighlighter like this:
 #+end_src
 
 SyntaxHighlighter Evolved always uses the global configuration unless you
-override it with the line
-~#+attr_wp: :syntaxhl light="true"~
-placed before the
-source block. The =:syntaxhl= property tells Org2Blog that everything following
-it is a configuration parameter for SyntaxHighlighter. Those values get passed
-on. The =#+ATTR_WP= line immediately *must* immediately precede the =#+BEGIN_SRC=
-line. It is easier though to configure it globally and never touch it again.
+override it with the line ~#+attr_wp: :syntaxhl light="true"~
+placed before the source block. The =:syntaxhl= property tells Org2Blog that
+everything following it is a configuration parameter for SyntaxHighlighter.
+Those values get passed on. The =#+ATTR_WP= line immediately *must* immediately
+precede the =#+BEGIN_SRC= line. It is easier though to configure it
+globally and never touch it again.
 
 With SyntaxHighlighter Evolved enabled:
 
