Redundant see license.txt

--- a/README.org
+++ b/README.org
@@ -1,13 +1,13 @@
 #+title: Org2Blog
 
+[[file:/images/logo-color-multi.png]]
+
 * About
 :properties:
 :ID:       org_gcr_2019-03-06T17-15-24-06-00_cosmicality:B5FB31EA-EA25-4675-90B0-AE0167BAE092
 :end:
 
 Blog from Org mode to WordPress.
-
-[[https://www.gnu.org/philosophy/free-sw.html][https://img.shields.io/badge/Libre%20Software-GPLv3-orange.svg]]
 
 * Table of Contents
 :PROPERTIES:
