--- a/HISTORY.org
+++ b/HISTORY.org
@@ -58,6 +58,8 @@
   - Load =subr-x=.
 - v1.1.3
   - Correct listing format spacing in ox-wp-src-block-shortcode and ox-wp-src-block-html.
+- v1.1.4
+  - Remove "Listing" prefix ox-wp-src-block-shortcode and ox-wp-src-block-html.
 
 ** Future
 
