--- a/HISTORY.org
+++ b/HISTORY.org
@@ -60,6 +60,8 @@
   - Correct listing format spacing in ox-wp-src-block-shortcode and ox-wp-src-block-html.
 - v1.1.4
   - Remove "Listing" prefix ox-wp-src-block-shortcode and ox-wp-src-block-html.
+- v1.1.5
+  - Make Subtree Entries using a template like Buffer Entries already do.
 
 ** Future
 
