--- a/README.org
+++ b/README.org
@@ -393,12 +393,16 @@ way to do it.
 
 Perhaps you know some defaults you want for every kind of entry. When you
 are ready configure them see these variables and functions:
-- ~org2blog/wp-default-categories~
-- ~org2blog/wp-default-categories-subtree~
-- ~org2blog/wp-buffer-template~
-- ~org2blog/wp-buffer-format-function~
-- ~org2blog/wp-default-title~
-- ~org2blog/wp-default-title-subtree~
+- Buffer Entry
+  - ~org2blog/wp-buffer-template~
+  - ~org2blog/wp-buffer-format-function~
+  - ~org2blog/wp-default-title~
+  - ~org2blog/wp-default-categories~
+- Subtree Entry
+  - ~org2blog/wp-buffer-subtree-template~
+  - ~org2blog/wp-buffer-subtree-format-function~
+  - ~org2blog/wp-default-title-subtree~
+  - ~org2blog/wp-default-categories-subtree~
 
 With your configuration ready, start creating the post.
 
