--- a/HISTORY.org
+++ b/HISTORY.org
@@ -62,6 +62,8 @@
   - Remove "Listing" prefix ox-wp-src-block-shortcode and ox-wp-src-block-html.
 - v1.1.5
   - Make Subtree Entries using a template like Buffer Entries already do.
+- v1.1.6
+  - Give Tags configurable default values like Categories already do.
 
 ** Future
 
