--- a/docs/ReleaseProcess.org
+++ b/docs/ReleaseProcess.org
@@ -1,7 +1,7 @@
 - [ ] The release version number appears in multiple files. Instead of manually updating all of them there is a function to do it. ~org2blog-def-update-artifacts~ visits the files and updates the correct settings. To use it first open ~org2blog.el~ and then call it.
 - [ ] Bring codebase up to expectations in [[CONTRIBUTING.org][Contributing]].
   - [ ] Byte compile file, checkdoc, package-lint
-- [ ] Complete [[./tests/org2blog-test-system.el][System Test Program and ]][[TestPlan.org][Test Plan]].
+- [ ] Complete [[../org2blog-test-system.el][System Test Program and Test Plan]]
   - Start Emacs in an empty environment before loading Org2Blog and performing
     the testing by starting Emacs like this: ~emacs --no-init-file~
 - [ ] Push package definition and version changes
