--- a/docs/CONTRIBUTING.org
+++ b/docs/CONTRIBUTING.org
@@ -39,6 +39,7 @@ simple—we are looking for all and everything you view as a contribution.
      follows the conventions for documentation strings.
 - *Review existing issues* :: [[https://github.com/org2blog/org2blog/issues][The issue tracker]] may already have them solved,
      otherwise they are a great place to start
+- *The Future* :: [[https://github.com/org2blog/org2blog/FUTURE.org][The future file]] may already have new features listed, and if it doesn't then maybe it should. Either way it might be a great place to start.
 - *Accept the license* :: Org2Blog is licensed [[https://www.gnu.org/licenses/gpl-3.0.en.html][GPLv3]]: you understand and submit
      your code under those terms.
 
