--- a/FUTURE.org
+++ b/FUTURE.org
@@ -1,3 +1,13 @@
+* Issue Created
+
+- Support for custom fields/taxonomies #278
+- Overhaul testing #274
+- Get Travis autobuild and autotesting running again #273
+- Migrate XML-RPC WordPress API to https://codex.wordpress.org/XML-RPC_WordPress_API/Taxonomies #271
+- Prevent documents from being posted #200
+
+* No Issue Created
+
 - Implement Texinfo manual in README.org
 - Refactor org2blog-tests.org running again
 - Migrate to continuous integration with nix-emacs-ci
