--- a/FUTURE.org
+++ b/FUTURE.org
@@ -12,6 +12,7 @@
 - Make the location of .org2blog configurable #268
   - Add a customizable variable for the default, which is nothing
   - If a customization exists then use that, otherwise use org-directory
+- Generate Texinfo from README.org #272    
 
 * No Issue Created
 
